change setting icon & fix: btn keep hover on mobile

--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ body:fullscreen .full-screen-icon-btn {
 }
 #setting-icon-btn, .setting-icon-btn {
     /* width: 64px; height: 64px; */
-    background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle r='30' cy='32' cx='32' stroke-width='4' stroke='%23fff' fill='transparent'/%3E%3Ccircle r='8' cy='32' cx='32' fill='%23fff'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 350 350'%3E%3Cg fill='%23fff' transform='translate(2.6 2.6) scale(3.8 3.8)'%3E%3Cpath transform='translate(-13.5 -13.5) scale(1.3 1.3)' d='M51.994 67.823c-1.886 0-3.722-.978-4.729-2.725c-.271-.471-.782-.767-1.321-.719c-.625 .029-1.26 .029-1.882 0c-.566-.048-1.054 .249-1.326 .718c-1.503 2.603-4.845 3.495-7.445 1.997l-4.57-2.639c-1.261-.729-2.163-1.904-2.54-3.31c-.377-1.406-.183-2.875 .545-4.136c0.271-.471 .245-1.067-.069-1.558c-.158-.247-.31-.497-.457-.751c-.148-.257-.289-.515-.423-.772c-.269-.52-.772-.841-1.315-.841c-3.005 0-5.45-2.445-5.45-5.45v-5.277c0-3.005 2.445-5.45 5.45-5.45c0.544 0 1.037-.302 1.287-.788c0.288-.559 .604-1.107 .941-1.631c0.294-.457 .309-1.032 .038-1.501c-1.503-2.603-.609-5.943 1.994-7.446l4.57-2.638c2.603-1.502 5.943-.608 7.445 1.995c0.272 .47 .771 .738 1.32 .72c0.622-.03 1.255-.03 1.882 0c0.547 .017 1.054-.249 1.325-.718c1.505-2.604 4.846-3.5 7.446-1.997l4.57 2.638c1.261 .728 2.163 1.903 2.539 3.31c0.377 1.406 .184 2.875-.545 4.136c-.271 .471-.244 1.067 .069 1.558c0.158 .245 .312 .497 .46 .754c0.146 .255 .287 .513 .421 .771c0.268 .517 .771 .838 1.314 .838h.001c1.456 0 2.824 .567 3.854 1.596s1.596 2.398 1.596 3.854v5.277c0 3.005-2.445 5.45-5.45 5.45c-.543 0-1.036 .302-1.285 .788c-.286 .555-.603 1.104-.942 1.631c-.294 .456-.309 1.032-.037 1.501c1.503 2.604 .608 5.944-1.994 7.446l-4.57 2.64C53.854 67.588 52.918 67.823 51.994 67.823zM46.019 60.378c1.943 0 3.73 1.024 4.709 2.719c0.194 .337 .508 .577 .882 .678c0.373 .101 .765 .049 1.1-.145l4.57-2.639c0.336-.193 .575-.506 .676-.88s.049-.765-.145-1.101c-1.024-1.773-.972-3.945 .137-5.668c0.271-.42 .521-.855 .748-1.295c0.938-1.824 2.793-2.959 4.842-2.959c0.8 0 1.451-.65 1.451-1.45v-5.277c0-.387-.15-.751-.425-1.025c-.273-.273-.638-.424-1.024-.424l0 0h-.001c-2.045 0-3.91-1.15-4.867-3.001c-.106-.207-.218-.41-.335-.613c-.115-.201-.235-.397-.359-.59c-1.125-1.756-1.189-3.946-.167-5.718c0.194-.336 .246-.727 .146-1.101s-.34-.687-.676-.881l-4.57-2.638c-.337-.194-.729-.246-1.1-.145c-.375 .101-.688 .34-.882 .676c-1.023 1.775-2.936 2.806-4.984 2.715c-.497-.024-.999-.023-1.493 0c-2.052 .097-3.954-.941-4.978-2.714c-.4-.692-1.289-.931-1.982-.532l-4.57 2.638c-.335 .194-.576 .507-.676 .881s-.049 .765 .145 1.101c1.024 1.774 .972 3.946-.138 5.668c-.267 .415-.518 .85-.746 1.294c-.938 1.825-2.794 2.959-4.842 2.959c-.801 0-1.452 .65-1.452 1.45v5.277c0 .8 .65 1.45 1.45 1.45c2.045 0 3.91 1.15 4.867 3.001c0.105 .203 .217 .408 .334 .611c0.116 .2 .237 .399 .363 .596c1.123 1.753 1.186 3.942 .165 5.713c-.194 .337-.246 .728-.146 1.102s.34 .687 .676 .881l4.57 2.638c0.693 .401 1.581 .16 1.981-.531c1.026-1.775 2.947-2.8 4.986-2.715c0.493 .025 .995 .025 1.493 0C45.84 60.38 45.93 60.378 46.019 60.378z' /%3E%3Ccircle cx='45' cy='45' r='9' /%3E%3Cpath d='M45 90C20.187 90 0 69.813 0 45C0 20.187 20.187 0 45 0c24.813 0 45 20.187 45 45C90 69.813 69.813 90 45 90zM45 4C22.393 4 4 22.393 4 45s18.393 41 41 41s41-18.393 41-41S67.607 4 45 4z' /%3E%3C/g%3E%3C/svg%3E");
 }
 #play-icon-btn, .play-icon-btn, #back-icon-btn, .back-icon-btn {
     /* width: 134px; height: 134px; */
@@ -72,8 +72,10 @@ body:fullscreen .full-screen-icon-btn {
     background-repeat: no-repeat;
     background-size: contain;
 }
-[id$="-icon-btn"]:hover, [class*="-icon-btn"]:hover {
-    filter: brightness(80%);
+@media(hover: hover) and (pointer: fine) {
+    [id$="-icon-btn"]:hover, [class*="-icon-btn"]:hover {
+        filter: brightness(80%);
+    }
 }
 [id$="-icon-btn"]:active, [class*="-icon-btn"]:active {
     filter: brightness(50%);
